# konlineaccounts

./: .kde-ci.yml  CMakeLists.txt  README.md
daemon/: CMakeLists.txt  Messages.sh
kcm/: CMakeLists.txt  Messages.sh
plugins/google/: CMakeLists.txt  Main.qml  Messages.sh  googleinterface.cpp  googleinterface.h  googlesetup.cpp  googlesetup.h
plugins/mastodon/: CMakeLists.txt  Main.qml  Messages.sh  mastodoninterface.cpp
plugins/nextcloud/: CMakeLists.txt  Main.qml  Messages.sh  caldav.cpp  carddav.cpp  nextcloudinterface.cpp
